Fixed alignment of circles and lines

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -48,7 +48,7 @@
   position: absolute;
   width: 20px;
   height: 20px;
-  right: -135px;
+  right: -145px;
   background-color: white;
   top: calc(50% - 7px);
   border-radius: 50%;
@@ -73,7 +73,7 @@
   top: 50%;
   width: 45px;
   z-index: 1;
-  right: -120px;
+  right: -130px;
   border: medium solid white;
   background-color: white;
 }
